--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -187,6 +187,7 @@
             if (window.localStorage) {
                 localStorage.box_msg = over_id;
                 localStorage.box_name = over_id_name;
+                localStorage.pre_url=document.location.href; 
                 window.location.href = 'reports#defects';
                 location.reload();
             } else {
