--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -271,6 +271,7 @@
                             if (window.localStorage) {
                                 localStorage.box_msg = over_id;
                                 localStorage.box_name = e.point.category;
+                                localStorage.pre_url=document.location.href; 
                                 window.location.href = 'reports#defects';
                                 location.reload();
                             } else {
