--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -255,7 +255,7 @@
                 valueSuffix: 's',
                 formatter: function () {
                     return '<span><b>' + this.x.split('#')[0] +
-                            '</b><br/>CycleTime: <b>' + this.y + ' s</b><span>';
+                            '</b><br/>CycleTime: <b>' + this.y + ' s</b></span>';
                 }
             },
 //            legend: {layout: 'vertical', align: 'right', verticalAlign: 'middle', borderWidth: 0},
