--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -11,14 +11,15 @@
       <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>CycleTime
         Detail<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="wait_time_in_hours" href="#wait_time_in_hours"><i class="icon-lock mark"></i>WaitTime in
+      <li><a menu="wait_time_in_hours" href="#wait_time_in_hours"><i class="icon-lock mark"></i> WaitTime in
         Hours<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="cycle_time_in_hours" href="#cycle_time_in_hours"><i class="icon-time mark"></i>CycleTime in
+      <li><a menu="cycle_time_in_hours" href="#cycle_time_in_hours"><i class="icon-time mark"></i> CycleTime in
         Hours<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="working_time_in_hours" href="#working_time_in_hours"><i class="icon-calendar mark"></i>WorkingTime in
-        Hours<i class="icon-chevron-right indicate"></i></a></li>
+      <li>
+        <a menu="working_time_in_hours" href="#working_time_in_hours"><i class="icon-calendar mark"></i> WorkingTime in
+          Hours<i class="icon-chevron-right indicate"></i></a></li>
 
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
         History<i class="icon-chevron-right indicate"></i></a></li>-->
